--- a/src/components/file-upload/z-file-upload/styles.css
+++ b/src/components/file-upload/z-file-upload/styles.css
@@ -1,5 +1,5 @@
 :host {
-  color: var(--color-text01);
+  color: var(--color-default-text);
   font-family: var(--font-family-sans);
   font-weight: var(--font-rg);
 }
