--- a/src/components/inputs/z-searchbar/styles.css
+++ b/src/components/inputs/z-searchbar/styles.css
@@ -73,7 +73,7 @@
 
 .results .category-heading > .subcategory {
   margin-top: var(--space-unit);
-  color: var(--color-text01);
+  color: var(--color-default-text);
   text-transform: uppercase;
 }
 
@@ -103,7 +103,7 @@
   flex-flow: row nowrap;
   align-items: center;
   justify-content: flex-start;
-  color: var(--color-text01);
+  color: var(--color-default-text);
   column-gap: calc(var(--space-unit) * 1.5);
   fill: var(--color-icon02);
   font-size: var(--font-size-2);
