--- a/src/snowflakes/myz/list/z-myz-list-item/styles.css
+++ b/src/snowflakes/myz/list/z-myz-list-item/styles.css
@@ -9,7 +9,7 @@
 :host li > span {
   display: flex;
   padding: calc(var(--space-unit) * 2) 0;
-  color: var(--color-text01);
+  color: var(--color-default-text);
   fill: var(--color-icon02);
   font-family: var(--font-family-sans);
   font-size: 16px;
