--- a/src/components/buttons/z-chip/styles.css
+++ b/src/components/buttons/z-chip/styles.css
@@ -6,8 +6,8 @@
   border: var(--border-size-small) solid var(--gray400);
   background-color: var(--color-surface01);
   border-radius: 14px;
-  color: var(--color-text01);
-  fill: var(--color-text01);
+  color: var(--color-default-text);
+  fill: var(--color-default-text);
   font-family: var(--font-family-sans);
   font-size: 14px;
   line-height: 28px;
