--- a/src/components/inputs/z-combobox/styles.css
+++ b/src/components/inputs/z-combobox/styles.css
@@ -52,7 +52,7 @@
 :host > div > .header > p.body-3 {
   padding: var(--space-unit) 0;
   margin: 0;
-  color: var(--color-text01);
+  color: var(--color-default-text);
 }
 
 :host > div > .header > p.body-3 > span {
