--- a/src/components/inputs/z-input/styles-checkbox-radio.css
+++ b/src/components/inputs/z-input/styles-checkbox-radio.css
@@ -4,7 +4,7 @@
   display: inline-flex;
   flex-direction: row;
   align-items: center;
-  color: var(--color-text01);
+  color: var(--color-default-text);
   fill: var(--color-primary01);
   font-family: var(--font-family-sans);
 }
@@ -113,7 +113,7 @@
 /* disabled */
 .radio-wrapper > input:disabled + .radio-label,
 .checkbox-wrapper > input:disabled + .checkbox-label {
-  color: var(--color-disabled02);
+  color: var(--color-disabled03);
 }
 
 .radio-wrapper > input:disabled + .radio-label > z-icon,
