--- a/src/components/inputs/z-input/styles-general.css
+++ b/src/components/inputs/z-input/styles-general.css
@@ -21,7 +21,7 @@ textarea,
   border: var(--border-size-small) solid var(--color-surface04);
   background: var(--color-input-field01);
   border-radius: var(--border-radius-small);
-  color: var(--color-text01);
+  color: var(--color-default-text);
   fill: var(--color-icon02);
   font-family: var(--font-family-sans);
   font-size: var(--font-size-3);
@@ -110,7 +110,7 @@ input:not([readonly]):hover,
 :host([disabled]:not([disabled="false"])) z-icon {
   border-color: var(--color-disabled01);
   box-shadow: none;
-  color: var(--color-disabled02);
+  color: var(--color-disabled03);
   fill: var(--color-disabled01);
   pointer-events: none;
 }
@@ -141,7 +141,7 @@ textarea::placeholder {
 label.input-label {
   display: block;
   padding-bottom: var(--space-unit);
-  color: var(--color-text02);
+  color: var(--color-default-text);
   font-family: var(--font-family-sans);
   font-size: var(--font-size-1);
   font-weight: var(--font-sb);
@@ -150,5 +150,5 @@ label.input-label {
 }
 
 :host([disabled]:not([disabled="false"])) label.input-label {
-  color: var(--color-disabled02);
+  color: var(--color-disabled03);
 }
