--- a/src/components/inputs/z-select/styles.css
+++ b/src/components/inputs/z-select/styles.css
@@ -1,7 +1,7 @@
 :host {
   display: inline-block;
   width: inherit;
-  color: var(--color-text02);
+  color: var(--color-default-text);
   font-family: var(--font-family-sans);
   font-size: var(--font-size-3);
   font-weight: var(--font-rg);
