--- a/src/components/modal/z-modal/styles.css
+++ b/src/components/modal/z-modal/styles.css
@@ -81,7 +81,7 @@
 .modal-container > header h2 {
   padding: 0;
   margin: 0;
-  color: var(--color-text01);
+  color: var(--color-default-text);
   font-weight: var(--font-rg);
 }
 
