--- a/src/components/navigation/z-menu-section/styles.css
+++ b/src/components/navigation/z-menu-section/styles.css
@@ -18,7 +18,7 @@
 }
 
 ::slotted(*) {
-  color: var(--color-text01);
+  color: var(--color-default-text);
   font-family: var(--font-family-sans);
   font-weight: var(--font-rg);
 }
