--- a/src/components/notification/z-tooltip/styles.css
+++ b/src/components/notification/z-tooltip/styles.css
@@ -1,6 +1,6 @@
 :host {
   --z-tooltip-theme--surface: var(--color-surface01);
-  --z-tooltip-theme--text: var(--color-text01);
+  --z-tooltip-theme--text: var(--color-default-text);
   --z-tooltip-shadow-filter: drop-shadow(0 1px 2px var(--shadow-color-base));
 }
 
