--- a/src/components/z-accordion/styles.css
+++ b/src/components/z-accordion/styles.css
@@ -7,10 +7,10 @@
 :host {
   --z-accordion-highlight-color: transparent;
   --z-accordion-bg: var(--color-surface01);
-  --z-accordion-label-color: var(--color-text01);
+  --z-accordion-label-color: var(--color-default-text);
   --z-accordion-disabled-label-color: var(--color-text03);
   --z-accordion-content-bg: var(--color-surface01);
-  --z-accordion-content-fg: var(--color-text01);
+  --z-accordion-content-fg: var(--color-default-text);
   --z-accordion-hover-color: var(--color-surface03);
   --z-accordion-left-padding: calc(var(--space-unit) * 2);
   --z-accordion-right-padding: var(--space-unit);
