--- a/src/components/z-anchor-navigation/styles.css
+++ b/src/components/z-anchor-navigation/styles.css
@@ -45,7 +45,7 @@ z-anchor-navigation nav * a:not(:only-child) {
 z-anchor-navigation nav > * {
   position: relative;
   border-left: var(--border-size-large) solid var(--color-surface04);
-  color: var(--color-text01);
+  color: var(--color-default-text);
   font-family: var(--font-family-sans);
   transition: background-color 0.3s ease-in-out, border-color 0.3s ease-in-out, color 0.3s ease-in-out;
 }
