--- a/src/snowflakes/myz/list/z-myz-list-item/styles.css
+++ b/src/snowflakes/myz/list/z-myz-list-item/styles.css
@@ -10,7 +10,7 @@
   display: flex;
   padding: calc(var(--space-unit) * 2) 0;
   color: var(--color-default-text);
-  fill: var(--color-icon02);
+  fill: var(--color-default-icon);
   font-family: var(--font-family-sans);
   font-size: 16px;
   font-weight: var(--font-rg);
