--- a/src/components/buttons/z-chip/styles.css
+++ b/src/components/buttons/z-chip/styles.css
@@ -30,7 +30,7 @@
 }
 
 :host > .z-chip-container:not([aria-disabled]):hover > z-icon:first-child {
-  fill: var(--color-icon02);
+  fill: var(--color-default-icon);
 }
 
 :host > .z-chip-container .interactive-icon {
