--- a/src/components/inputs/z-searchbar/styles.css
+++ b/src/components/inputs/z-searchbar/styles.css
@@ -105,7 +105,7 @@
   justify-content: flex-start;
   color: var(--color-default-text);
   column-gap: calc(var(--space-unit) * 1.5);
-  fill: var(--color-icon02);
+  fill: var(--color-default-icon);
   font-size: var(--font-size-2);
   line-height: var(--font-size-3);
 }
