--- a/src/components/navigation/z-menu-section/styles.css
+++ b/src/components/navigation/z-menu-section/styles.css
@@ -90,7 +90,7 @@ when placed below the real text using `flex-direction: column`. */
 
 .label z-icon {
   margin-left: calc(var(--space-unit) * 4);
-  fill: var(--color-icon02);
+  fill: var(--color-default-icon);
 }
 
 .items {
