--- a/src/components/z-anchor-navigation/styles.css
+++ b/src/components/z-anchor-navigation/styles.css
@@ -50,7 +50,7 @@ z-anchor-navigation nav > * {
   transition: background-color 0.3s ease-in-out, border-color 0.3s ease-in-out, color 0.3s ease-in-out;
 }
 
-z-anchor-navigation nav > [current] {
+z-anchor-navigation nav > [data-current] {
   border-left-color: var(--color-primary01);
   color: var(--color-link-primary);
   font-weight: var(--font-sb);
@@ -107,13 +107,13 @@ z-anchor-navigation nav z-icon {
     outline: none;
   }
 
-  z-anchor-navigation[hide-unselected] nav > *:not([current], :hover, :focus, :focus-within) {
+  z-anchor-navigation[hide-unselected] nav > *:not([data-current], :hover, :focus, :focus-within) {
     color: transparent;
   }
 
   z-anchor-navigation
     nav
-    > *:not([current], :hover, :focus, :focus-within)
+    > *:not([data-current], :hover, :focus, :focus-within)
     > *:is(z-button, button, z-icon):not(:focus:focus-visible) {
     opacity: 0;
     pointer-events: none;
