--- a/src/components/file-upload/z-dragdrop-area/styles.css
+++ b/src/components/file-upload/z-dragdrop-area/styles.css
@@ -41,7 +41,7 @@
 :host > .dragdrop .dragover-container .dragover-message {
   padding: 10px 28px;
   background-color: var(--color-link-primary);
-  color: var(--color-inverse-text);
+  color: var(--color-text-inverse);
 }
 
 :host > .dragdrop.dragover .dragover-container {
