--- a/src/components/z-book-card/styles.css
+++ b/src/components/z-book-card/styles.css
@@ -53,7 +53,7 @@
   background: var(--z-book-card-ribbon-background-color);
   border-radius: 0 var(--border-radius) var(--border-radius) 0;
   box-shadow: var(--shadow-2);
-  color: var(--color-inverse-text);
+  color: var(--color-text-inverse);
   font-family: var(--font-family-sans);
   font-size: var(--font-size-2);
   font-weight: var(--font-sb);
