chore: z-stepper a11y click and focus

--- a/src/components/indicators/z-stepper-item/styles.css
+++ b/src/components/indicators/z-stepper-item/styles.css
@@ -48,7 +48,7 @@
   text-align: center;
 }
 
-:host(:not([disabled])) .stepper-item {
+:host([href]:not([disabled], [pressed])) .stepper-item {
   cursor: pointer;
 }
 
