feat: added divider in menu element

--- a/src/components/navigation/z-menu/styles.css
+++ b/src/components/navigation/z-menu/styles.css
@@ -33,6 +33,11 @@
   text-align: left;
 }
 
+.menu-wrapper {
+  display: flex;
+  align-items: center;
+}
+
 button.menu-label {
   cursor: pointer;
 }
@@ -125,7 +130,7 @@ when placed below the real text using `flex-direction: column`. */
   appearance: none;
   color: var(--z-menu-label-color);
   font-family: var(--font-family-sans);
-  font-size: var(--font-size-5);
+  font-size: calc(var(--space-unit) * 2);
   font-weight: inherit;
   letter-spacing: 0.36px; /* increasing the letter spacing of the regular text helps reduce the size difference between regular and bold text */
   line-height: 1.2;
@@ -214,4 +219,12 @@ when placed below the real text using `flex-direction: column`. */
 .items > ::slotted([slot="item"]:active) {
   border-color: var(--color-secondary01);
   font-weight: var(--font-bd);
+}
+
+/* Desktop breakpoint */
+@media (min-width: 1152px) {
+  .menu-wrapper > z-divider.menu-divider {
+    height: calc(var(--space-unit) * 2);
+    margin: 0 calc(var(--space-unit) * 2);
+  }
 }
