chore: z-stepper-item: avoid click and focus on pressed status

--- a/src/components/indicators/z-stepper-item/styles.css
+++ b/src/components/indicators/z-stepper-item/styles.css
@@ -57,6 +57,11 @@
   pointer-events: none;
 }
 
+:host([pressed]),
+:host([pressed]) .stepper-item {
+  pointer-events: none;
+}
+
 .indicator {
   display: flex;
   width: calc(var(--space-unit) * 4);
