--- a/src/components/navigation/z-menu/styles.css
+++ b/src/components/navigation/z-menu/styles.css
@@ -39,6 +39,7 @@
 }
 
 button.menu-label {
+  width: 100%;
   cursor: pointer;
 }
 
@@ -222,8 +223,9 @@ when placed below the real text using `flex-direction: column`. */
 }
 
 /* Desktop breakpoint */
-@media (min-width: 1152px) {
-  .menu-wrapper > z-divider.menu-divider {
+@media (min-width: 768px) {
+  .menu-wrapper > z-divider.menu-divider,
+  .menu-label > z-divider.menu-divider {
     height: calc(var(--space-unit) * 2);
     margin: 0 calc(var(--space-unit) * 2);
   }
